# pension-calculator

./: .gitignore  README.md  pyproject.toml
pension_calculator/: __init__.py  app.config.toml  calculate.py  cli.py  energy.py  graph.py  house.py  make_config.py  mortgage.py  person.py  plot_heating_cost_sensitivities.py  utils.py
pension_calculator/compute/: compute_heating_cost_sensitivities.py  compute_payment_schedule.py  utils.py
pension_calculator/models/: __init__.py  energy.py  house.py  mortgage.py  pension.py  person.py
pension_calculator/plot/: helpers.py  make_plots.py  plot_heating_cost_sensitivities.py  plot_payment_schedule.py  plot_payment_schedule_explainer.py  plot_relative_energy_cost_4_panel.py  plot_relative_energy_cost_single.py  scenario.py  utils.py
pension_calculator/plots/: plot_average_vs_passive_house_heating_cost.py  plot_heating_cost_sensitivities.py  plot_pension.py
pension_calculator/web/: payment_schedule.py
tests/: conftest.py  test_compute.py  test_energy.py  test_graph.py  test_house.py  test_mortgage.py  test_pension.py  test_pension_calculator.py  test_person.py  test_utils.py
tests/compute/: test_compute_payment_schedule.py
tests/models/: test_energy.py  test_house.py  test_mortgage.py  test_pension.py  test_person.py
tests/quality-control/: energy.numbers  mortgage.numbers
